[tool.poetry]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["okamoto <okamoto_yu-ki@outlook.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
